[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Animals/Stage 1/Bat.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 411.464, 185.95 )
scale = Vector2( 10.4483, 4.87646 )
texture = ExtResource( 3 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LetterTimer" type="Timer" parent="."]
one_shot = true

[node name="WordTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 412.724, 28.5732 )
SPEED = 200

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="Creatures" type="YSort" parent="."]

[node name="Bat" parent="Creatures" instance=ExtResource( 4 )]
position = Vector2( 226.471, 27.7183 )
